[package]
name = "hashmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = "0.24.3"

[dependencies]
libc = "0.2"
safer-ffi = { version = "*", features = ["proc_macros"] }

[features]
c-headers = ["safer-ffi/headers"]

[lib]
name = "rusthashmap"
crate-type = ["cdylib"]